--- a/p/1.md
+++ b/p/1.md
@@ -215,3 +215,82 @@ Python определяет собственные объектные типы, 
 | Frozen set    | Неизменяемое множество | frozenset | no | frozenset(['Elsa', 'Otto'])                       | Chapter 9 |
 | Dictionary    | Словарь          | dict      | yes      | {'game': 'bingo', 'dog': 'dingo', 'drummer': 'Ringo'} | Chapter 9 |
 
+
+## Числа: `int` и `float`
+
+📌 Числа с плавающей точкой (float) не являются точными
+
+Многие распространённые числа невозможно представить точно в формате с плавающей точкой:
+```
+>>> 1/3
+0.3333333333333333
+```
+
+На самом деле 1/3 — это бесконечная десятичная дробь.
+Компьютер же может хранить лишь ограниченное количество бит, поэтому он обрезает запись числа на каком-то шаге.
+
+👉 Это означает, что при работе с числами `float` нужно быть осторожным: результаты вычислений могут содержать небольшие погрешности.
+
+В официальной документации Python есть раздел `Floating-Point Arithmetic: Issues and Limitations` («Арифметика с плавающей точкой: проблемы и ограничения»), где это подробно объясняется.
+
+📌 Решения проблемы
+1. Дроби (Fractions)
+
+Python имеет стандартный модуль `fractions`, который работает с рациональными числами (обыкновенными дробями).
+Такой объект хранит числитель и знаменатель и позволяет более точно представлять числа, чем `float`.
+
+Примеры:
+```
+from fractions import Fraction
+
+Fraction(97, 1)        # Fraction(97, 1)
+Fraction('97')         # Fraction(97, 1)
+Fraction(97.0)         # Fraction(97, 1)
+Fraction('97.0')       # Fraction(97, 1)
+
+Fraction(1, 2) + Fraction(7, 16)  # Fraction(15, 16)
+```
+
+📌 Здесь числа хранятся в виде настоящих дробей, поэтому результат всегда точный.
+
+2. Десятичные числа (Decimals)
+
+Модуль decimal предназначен для точного представления десятичных чисел.
+Он особенно полезен в финансовых приложениях (например, бухгалтерия).
+
+Проблема с float в деньгах:
+```
+0.10 + 0.20
+# 0.30000000000000004
+```
+
+Погрешность связана с тем, что `0.1` и `0.2` не имеют точного представления в двоичной системе.
+
+✅ Решение:
+
+использовать `decimal.Decimal`,
+
+либо хранить деньги в целых единицах (например, в копейках/центах как int).
+
+То есть: вместо `$1.23` хранить `123` (целое число центов), считать в них, и только при выводе делить обратно на `100`.
+
+3. Математические функции
+
+Python поддерживает:
+
+- комплексные числа,
+
+- стандартные математические функции (sqrt, cos, sin, log, и т. д.).
+
+Эти темы подробно рассматриваются позже (глава 27). Если интересно уже сейчас — см. документацию по стандартному модулю math.
+
+👉 Итог:
+
+- `float` быстрые, но неточные (подходят для науки и инженерии, где нужна скорость).
+
+- `fractions.Fraction` — точные рациональные числа (подходит для математики).
+
+- `decimal.Decimal` — точные десятичные числа (подходит для финансов и денег).
+
+- Для серьёзной математики и комплексных вычислений — есть модуль `math` и встроенные комплексные типы.
+
