--- a/p/1.md
+++ b/p/1.md
@@ -294,3 +294,65 @@ Python поддерживает:
 
 - Для серьёзной математики и комплексных вычислений — есть модуль `math` и встроенные комплексные типы.
 
+
+## Строки
+
+📌 Строки — первый пример последовательности в Python
+
+Последовательность (sequence) — это упорядоченная коллекция элементов.
+
+Что можно делать с любой последовательностью в Python:
+
+- Проверять, содержится ли элемент в последовательности.
+
+- Находить индекс элемента по его значению.
+
+- Получать элемент по индексу.
+
+- Получать срез элементов (slice) в заданном диапазоне.
+
+- Определять длину последовательности.
+
+- Определять минимальный и максимальный элементы.
+
+Другие типы последовательностей, которые мы встретим в следующих главах:
+
+- `tuple` (кортеж) и `list` (список) — Глава 8,
+
+- `bytes` и `bytearray` — Глава 5.
+
+📌 Неизменяемость строк
+
+В отличие от некоторых языков, строки в Python неизменяемы (immutable).
+
+- Нельзя изменить строку «на месте».
+
+- Но можно создать новую строку, собрав её из частей другой.
+
+📌 Специальные виды строк
+
+В Python есть специальные префиксы перед кавычками:
+
+- `f` или `F` — f-строки, для форматирования (рассматриваются позже в этой главе).
+
+- `r` или `R` — raw-строки, отключают экранирование (\ остаётся как есть). Используются, например, в регулярных выражениях (см. Глава 19).
+
+- `fr` / `Fr` / `fR` / `FR` — raw f-строки, совмещают форматирование и «сырые» строки.
+
+- `u` — Unicode-строки. В современных версиях Python это то же самое, что обычная строка (str).
+
+- `b` — строки байтов, создают объект типа bytes (см. Глава 5).
+
+
+| Префикс | Название             | Описание                                                                 | Пример кода                     | Результат                     |
+|---------|----------------------|--------------------------------------------------------------------------|---------------------------------|-------------------------------|
+| (нет)   | Обычная строка       | Стандартная строка (тип `str`).                                          | 'hello'                         | 'hello'                       |
+| f / F   | f-строка             | Форматированная строка: можно вставлять выражения внутри `{}`.           | f"2+2={2+2}"                    | '2+2=4'                       |
+| r / R   | raw-строка (сырая)   | Экранирование отключено: `\n` остаётся символами `\` и `n`.              | r"line1\nline2"                 | 'line1\\nline2'               |
+| fr / RF | raw f-строка         | Комбинация: форматирование + «сырая» строка.                             | fr"путь={r'C:\\data'}"          | 'путь=C:\\data'               |
+| u       | Unicode-строка       | В Python 3 эквивалент обычной строки (`str`).                            | u"привет"                       | 'привет'                      |
+| b       | байтовая строка      | Объект типа `bytes`. Используется для хранения последовательности байтов.| b"hello"                        | b'hello'                      |
+
+
+
+
