--- a/p/1.md
+++ b/p/1.md
@@ -354,5 +354,41 @@ Python поддерживает:
 | b       | байтовая строка      | Объект типа `bytes`. Используется для хранения последовательности байтов.| b"hello"                        | b'hello'                      |
 
 
+## Кортежи и списки
+
+Большинство языков программирования умеют представлять последовательность элементов, индексируемых по целым числам: первый, второй, … и так до последнего.
+
+В Python вы уже встречали:
+
+- строки (Chapter 4) — последовательности текстовых символов,
+
+- `bytes` и `bytearray` (Chapter 5) — последовательности 8-битных двоичных значений.
+
+📌 Другие последовательности: кортежи и списки
+
+Python имеет и другие структуры последовательностей:
+
+- `tuple` (кортеж)
+
+- `list` (список)
+
+Обе могут содержать ноль или более элементов.
+В отличие от строк, элементы кортежей и списков не обязаны быть одного типа.
+На самом деле, каждый элемент может быть любым объектом Python.
+Это позволяет строить структуры любой глубины и сложности.
+
+📌 Зачем нужны и списки, и кортежи?
+
+Кортежи (`tuple`) — неизменяемые.
+Элементы задаются один раз при создании и больше не могут быть изменены.
+Их можно представить как «запечённые в пироге».
+
+Списки (`list`) — изменяемые.
+В них можно свободно добавлять и удалять элементы, менять порядок и содержимое.
+
+⚡ В следующих примерах будет показано использование и кортежей, и списков,
+но особый акцент сделан на списках как на наиболее гибкой и часто используемой структуре в Python.
+
+
 
 
